_sass/_content.scss
// Content

.content {
  :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
    text-align: justify;
  }

  a {
    color: $primary-color;
    text-decoration: none;
    padding: .1em  .2em  .1em  .2em;
    margin: -.1em -.1em -.1em -.2em;

    &:active, &:hover {
      background-color: $primary-color-effects;
      color: $text-color-light;
      transition: .3s;

      &[href*='//'] {
        background-color: $black-color-effects;
        color: $primary-color-effects;
      }
    }
  }


  .content-header {
    .content-title {
      text-align: start;
      line-height: 1.5em;

      a {
        display: inline-block;
      }
    }

    .content-meta {
      color: $black-color-effects;
    }
  }

  .content-body {
    figure,
    blockquote,
    pre {
      margin-top: 3rem;
      margin-bottom: 3rem;
      @extend %lateral-strip;
    }

    figure figcaption,
    blockquote,
    pre {
      padding-left: 1.25em;
      @include breakpoint(52rem) { padding-left: 2em; }
    }

    figure p {
      @extend %no-margin;
    }

    figure,
    blockquote {
      img,
      video {
        width: 100%;
        object-fit: contain;
      }

      figcaption,
      footer {
        font-style: italic;
      }
    }


    p {
      margin-top: 1.5rem;
      margin-bottom: 1.5rem;
    }


    aside {
      font-size: 95%;

      &::before {
        content: "";
        display: block;
        width: 33%;

        margin-bottom: -.25em;

        border-top: 5px solid $primary-color;
      }
    }

    pre, code {
      white-space: pre-wrap;
    }


    pre {
      @extend %lateral-strip;
      font-family: unset;
    }

    #markdown-toc {
      @extend %lateral-strip;
      padding-left: 2.25em;
      @include breakpoint(52rem) { padding-left: 3em; }
    }
  }
}

